syntax = "proto3";

message SendMessage {
    string toNumber = 1;
    string content = 2;
    string otherInfo = 3;
    string msgIDDOne =4;

}

service SendSMS {
    rpc Send(stream SendMessage) returns (stream SendMessage) {}
}